# iphonesdk-utils

./: Makefile.am  README.md  configure.ac
clangwrapper/: Makefile.am  clangwrapper.cpp
genLocalization/: Makefile.am  getLocalizedStringFromFile.cpp  main.cpp
ldid/: Makefile.am
libhelper/: Makefile.am
plutil/: Makefile.am
